fixed tech logos sizing on mobile

--- a/src/components/UI/atoms/ProjectSkills/ProjectSkills.css
+++ b/src/components/UI/atoms/ProjectSkills/ProjectSkills.css
@@ -24,7 +24,7 @@
   }
 
   .project-tech-icons img {
-    max-width: 20%;
+    max-width: 50%;
     border-radius: 0;
   }
 }
